@@ -5,6 +5,7 @@ Current Release
 - Made ExportAllBindTrees export to a single tar.bz2 file
 - Made dnsconfigsync use the new tarfiles
 - Made tarfiles embed date and time
+- Added db_recovery library
 
 2010-03-03 release-0.12
 - Reordered records in zone_importer_lib so SOA comes first
